# Qt-NNDesigner

./: .gitignore  README.md  main.py  nndesigner.py  nndesigner.ui  nndesigner_ui.py  pyproject.toml
