[tool.poetry]
name = "qt-nndesigner"
version = "0.1.0"
description = ""
authors = ["HAL9000COM"]
license = "LGPL-3.0"
readme = "README.md"
packages = [{include = "qt_nndesigner"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow-intel = "^2.12.0"
tf2onnx = "^1.14.0"


[tool.poetry.group.develop.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
